<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:paddingStart="20sp"
            android:src="@drawable/ic_baseline_menu_24"
            app:tint="@color/black"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_alignParentEnd="true"
            android:paddingEnd="20sp"
            app:tint="@color/black"
            android:src="@drawable/ic_baseline_exit"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingStart="20sp"
                        android:orientation="vertical"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginTop="45dp"
                            android:text="@string/dateMain"
                            android:textColor="@color/black_spotify"
                            android:textSize="25sp"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/menu"
                            android:textColor="@color/black_spotify"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            tools:ignore="RtlHardcoded" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_xlarge" />

                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:gravity="center">

                    <RelativeLayout
                        android:id="@+id/card"
                        android:layout_width="match_parent"
                        android:layout_height="220dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="330dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="5sp"
                            app:cardCornerRadius="20dp"
                            android:id="@+id/ThirtyDayPack"
                            android:background="@color/grey_200"
                            app:cardElevation="5dp">

                            <LinearLayout
                                android:id="@+id/ll"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="95dp"
                                android:layout_marginTop="20dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="end"
                                    android:layout_marginTop="25sp"
                                    android:text="@string/package30"
                                    android:textAlignment="viewEnd"
                                    android:textColor="@color/white_spotify"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="end"
                                    android:text="@string/ingredients"
                                    android:textAlignment="viewEnd"
                                    android:textSize="17sp"
                                    android:textColor="@color/grey_600"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:text="@string/money"
                                    android:textColor="@color/white_spotify"
                                    android:textSize="22sp"
                                    android:textStyle="bold" />

                                <FrameLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginEnd="20dp"
                                        android:gravity="end">

                                        <at.markushi.ui.CircleButton
                                            android:layout_width="25dip"
                                            android:layout_height="25dip"
                                            android:layout_gravity="end"
                                            android:src="@drawable/add"
                                            android:tint="@color/white_spotify"
                                            app:cb_color="#99CC00"
                                            app:cb_pressedRingWidth="8dip" />
                                    </LinearLayout>
                                </FrameLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginTop="35dp"
                            android:src="@drawable/food" />
                    </RelativeLayout>
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:text="Popular These Days"
                android:textAlignment="viewEnd"
                android:textColor="@color/white_spotify"
                android:textSize="25dp"
                android:layout_marginLeft="25sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10sp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="180dp"
                        android:layout_height="220dp"
                        android:layout_marginRight="10dp"
                        app:cardCornerRadius="20dp"
                        android:id="@+id/TwoDayPack"
                        android:background="#ffffff"
                        android:layout_marginBottom="10sp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="90dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/food" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/google_sans_medium"
                                android:gravity="center_horizontal"
                                android:text="Fifteen Day"
                                android:textAlignment="center"
                                android:textColor="@color/white_spotify"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/google_sans_medium"
                                android:gravity="center_horizontal"
                                android:text="Ingredients,\n Ingredients"
                                android:textAlignment="center"
                                android:textColor="@color/grey_600"
                                android:textSize="16dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="180dp"
                        android:layout_height="220dp"
                        android:layout_marginRight="10dp"
                        app:cardCornerRadius="20dp"
                        android:background="#ffffff"
                        android:id="@+id/FifteenDayPack"
                        android:layout_marginBottom="10sp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="90dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/food" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/google_sans_medium"
                                android:gravity="center_horizontal"
                                android:text="Two Day"
                                android:textAlignment="center"
                                android:textColor="@color/white_spotify"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/google_sans_medium"
                                android:gravity="center_horizontal"
                                android:text="Ingredients,\n Ingredients"
                                android:textAlignment="center"
                                android:textColor="@color/grey_600"
                                android:textSize="16dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
